# cantata

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  TODO  amarok2cantata.sh  ambiance.css  application.cpp  application.h  cantata-remote.cmake  cantata.desktop  cantata.desktop.cmake  cantata.qrc  cantata_fr.ts  cantata_icon.qrc  cantata_media.qrc  cantata_qt.qrc  cantataui.rc  cmake_uninstall.cmake.in  config.h.cmake  debugtimer.h  install_dirs.cmake  main.cpp  manifest.json  qtplural.h  windows-installer.iss
branches/1.1/: CMakeLists.txt  ChangeLog  README
branches/1.2/: CMakeLists.txt  ChangeLog
devices/avahi/: CMakeLists.txt  avahi.cpp  avahi.h  avahiservice.cpp  avahiservice.h
devices/mounter/: CMakeLists.txt  com.googlecode.cantata.mounter.conf  main.cpp  mounter.cpp  mounter.h  mpd.cantata.mounter.conf  mpd.cantata.mounter.service.cmake  mpd.cantata.mounter.xml
icons/: CMakeLists.txt
icons/suru/: CMakeLists.txt  render-bitmaps.py
icons/theme/: CMakeLists.txt  index.theme
icons/yaru/: CMakeLists.txt
mac/: CMakeLists.txt  Info.plist.cmake  cantata.icns  createicon.sh  dockmenu.cpp  dockmenu.h  macnotify.h  macnotify.mm  macnowplaying.h  macnowplaying.mm  powermanagement.cpp  powermanagement.h
mac/dmg/: background.xcf  create-dmg.sh.in
mac/icons/: CMakeLists.txt  LICENSE.LGPL_V3  README  index.theme
online/icons/: CMakeLists.txt
po/: CMakeLists.txt  cantata.pot  cs.po  de.po  en_GB.po  es.po  fr.po  generate.sh  hu.po  ja.po  ko.po  pl.po  pl_PL.po  ru.po  zh_CN.po
replaygain/: CMakeLists.txt  albumscanner.cpp  albumscanner.h  ffmpeginput.cpp  ffmpeginput.h  input.h  jobcontroller.cpp  jobcontroller.h  main.cpp  mpg123input.cpp  mpg123input.h  replaygain.cpp  replaygain.h  rgdialog.cpp  rgdialog.h  scanner.cpp  scanner.h  tagreader.cpp  tagreader.h  trackscanner.cpp  trackscanner.h
streams/icons/: CMakeLists.txt
support/: CMakeLists.txt  Cantata-FontAwesome-README  acceleratormanager.cpp  acceleratormanager.h  acceleratormanager_private.h  action.cpp  action.h  actioncollection.cpp  actioncollection.h  ambiance.css  buddylabel.cpp  buddylabel.h  capacitybar.h  combobox.cpp  combobox.h  configdialog.cpp  configdialog.h  configuration.cpp  configuration.h  dialog.cpp  dialog.h  dirrequester.cpp  dirrequester.h  fancytabwidget.cpp  fancytabwidget.h  flattoolbutton.cpp  flattoolbutton.h  flickcharm.cpp  fontawesome.qrc  globalstatic.h  gtkproxystyle.cpp  gtkproxystyle.h  gtkstyle.cpp  gtkstyle.h  icon.cpp  icon.h  inputdialog.cpp  inputdialog.h  keysequencewidget.cpp  keysequencewidget.h  (+51 more)
support/themes/: CMakeLists.txt  adwaita.css  ambiance-dt.css  ambiance.css  arc-dark.css  arc-darker.css  arc.css  elementary.css  faience.css  greybird.css  mint-x.css  radiance-dt.css  radiance.css
tags/: CMakeLists.txt  filetyperesolver.cpp  filetyperesolver.h  fixes.xml  main.cpp  tagclient.cpp  tagclient.h  tageditor.cpp  tageditor.h  tageditor.ui  taghelper.cpp  taghelper.h  taghelperiface.cpp  taghelperiface.h  tags.cpp  tags.h  tagserver.cpp  tagserver.h  trackorganiser.cpp  trackorganiser.h  trackorganiser.ui
translations/: CMakeLists.txt  blank.ts  cantata_cs.ts  cantata_da.ts  cantata_de.ts  cantata_en_GB.ts  cantata_es.ts  cantata_fi.ts  cantata_fr.ts  cantata_hu.ts  cantata_it.ts  cantata_ja.ts  cantata_ko.ts  cantata_nl.ts  cantata_pl.ts  cantata_pt.qm  cantata_pt.ts  cantata_pt_BR.ts  cantata_ru.ts  cantata_zh_CN.ts  update.sh
trunk/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  TODO  ambiance.css  application.cpp  application.h  cantata-play-audiocd.desktop  cantata-remote.cmake  cantata-ubuntu.desktop  cantata-ubuntu.json  cantata.desktop  cantata.desktop.cmake  cantata.qrc  cantata_qt.qrc  cantataui.rc  config.h.cmake  main.cpp  manifest.json  radiance.css
trunk/android/: cantata_android.qrc
trunk/cmake/: FindMusicBrainz5.cmake
trunk/context/: albumview.cpp  albumview.h  artistview.cpp  artistview.h  backdropcreator.cpp  contextengine.cpp  contextengine.h  contextpage.cpp  contextpage.h  contextwidget.cpp  contextwidget.h  lastfmengine.cpp  lyricsdialog.h  lyricsettings.cpp  metaengine.h  onlineview.cpp  othersettings.cpp  othersettings.h  othersettings.ui  songview.cpp  songview.h  togglelist.cpp  togglelist.h  ultimate_providers.xml  ultimatelyrics.cpp  ultimatelyricsprovider.cpp  ultimatelyricsprovider.h  view.cpp  view.h  wikipediaengine.cpp  wikipediasettings.cpp  wikipediasettings.h
trunk/dbus/: CMakeLists.txt  com.googlecode.cantata.xml  dockmanager.cpp  gnomemediakeys.cpp  gnomemediakeys.h  mpris.cpp  mpris.h  notify.cpp  org.kde.cantata.Mpris2Extensions.ui.xml  powermanagement.cpp
trunk/devices/: actiondialog.cpp  actiondialog.h  actiondialog.ui  albumdetailsdialog.cpp  albumdetailsdialog.h  audiocddevice.cpp  audiocddevice.h  audiocdsettings.cpp  audiocdsettings.ui  cdalbum.h  cddb.cpp  cddb.h  cddbinterface.cpp  cddbinterface.h  cddbselectiondialog.cpp  cdparanoia.cpp  cdparanoia.h  device.cpp  device.h  deviceoptions.cpp  deviceoptions.h  devicepropertiesdialog.cpp  devicepropertiesdialog.h  devicepropertiesdialog.ui  devicepropertieswidget.cpp  devicepropertieswidget.h  devicepropertieswidget.ui  devicespage.cpp  devicespage.h  devicespage.ui  encoders.cpp  encoders.h  extractjob.cpp  extractjob.h  filejob.cpp  filejob.h  filenameschemedialog.cpp  filenameschemedialog.h  filenameschemedialog.ui  freespaceinfo.cpp  (+38 more)
trunk/docs/: CMakeLists.txt
trunk/dynamic/: cantata-dynamic  dynamic.cpp  dynamic.h  dynamicpage.cpp  dynamicpage.h  dynamicpage.ui  dynamicproxymodel.cpp  dynamicproxymodel.h  dynamicrule.ui  dynamicruledialog.cpp  dynamicruledialog.h  dynamicrules.ui  dynamicrulesdialog.cpp  dynamicrulesdialog.h  (+1 more)
web/: CMakeLists.txt  TODO  cantata-web.conf.cmake  config.h.cmake
windows/: CMakeLists.txt  Cantata README.txt  Cantata.README  Qt4.LICENSE.LGPL_V2  Qt4.README  TagLib README.txt  cantata-humanity.nsi.cmake  cantata-oxygen.nsi.cmake  cantata-qt5-oxygen.nsi.cmake  cantata-qt5.nsi.cmake  cantata.iss.cmake  cantata.nsi.cmake  createicon.sh  thumbnailtoolbar.cpp  thumbnailtoolbar.h
(+4096 files in other folders)
